--- a/BIC_CNG/CNG_Connector/CNG_Connector.vcxproj
+++ b/BIC_CNG/CNG_Connector/CNG_Connector.vcxproj
@@ -104,7 +104,7 @@
       <PreprocessorDefinitions>CNG_KSP;_DEBUG;_WINDOWS;_USRDLL;CURL_STATICLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\debug\x64\lib\libcurl_a_debug.lib;%(AdditionalDependencies);$(ProjectDir)lib\win8\x64\bcrypt_provider.lib;$(ProjectDir)lib\win8\x64\cng_provider.lib;$(ProjectDir)lib\win8\x64\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\debug\x64\lib\libcurl_a_debug.lib;%(AdditionalDependencies);$(ProjectDir)lib\x64\bcrypt_provider.lib;$(ProjectDir)lib\x64\cng_provider.lib;$(ProjectDir)lib\x64\ncrypt_provider.lib</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
@@ -153,7 +153,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\release\x64\lib\libcurl_a.lib;%(AdditionalDependencies);$(ProjectDir)lib\win8\x64\bcrypt_provider.lib;$(ProjectDir)lib\win8\x64\cng_provider.lib;$(ProjectDir)lib\win8\x64\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\release\x64\lib\libcurl_a.lib;%(AdditionalDependencies);$(ProjectDir)lib\x64\bcrypt_provider.lib;$(ProjectDir)lib\x64\cng_provider.lib;$(ProjectDir)lib\x64\ncrypt_provider.lib</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
