--- a/Test_Projects/akv_CNG.Test/akv_CNG.Test.vcxproj
+++ b/Test_Projects/akv_CNG.Test/akv_CNG.Test.vcxproj
@@ -111,7 +111,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\bcrypt_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\cng_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\ncrypt_provider.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\bcrypt_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\cng_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\ncrypt_provider.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -164,7 +164,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\bcrypt_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\cng_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\win8\x64\ncrypt_provider.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\bcrypt_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\cng_provider.lib;$(SolutionDir)BIC_CNG\CNG_Connector\lib\x64\ncrypt_provider.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
