--- a/BIC_CNG/CNG_Connector/CNG_Connector.vcxproj
+++ b/BIC_CNG/CNG_Connector/CNG_Connector.vcxproj
@@ -28,26 +28,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -86,14 +86,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-    <IncludePath>$(ProjectDir)include;$(ProjectDir)src;$(SolutionDir)libs\windows\openssl\release\x64\include;$(SolutionDir)libs\windows\libcurl\debug\x64\include\curl;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)libs\windows\openssl\release\x64\lib;$(SolutionDir)libs\windows\libcurl\debug\x64\lib;$(LibraryPath);$(ProjectDir)lib\win8\x64</LibraryPath>
+    <IncludePath>$(ProjectDir)include;$(ProjectDir)src;$(SolutionDir)libs\windows\libcurl\debug\x64\include\curl;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)libs\windows\libcurl\debug\x64\lib;$(LibraryPath);$(ProjectDir)lib\win8\x64</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-    <IncludePath>$(ProjectDir)include;$(ProjectDir)src;$(SolutionDir)libs\windows\openssl\release\x64\include;$(SolutionDir)libs\windows\libcurl\release\x64\include\curl;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)libs\windows\openssl\release\x64\lib;$(SolutionDir)libs\windows\libcurl\release\x64\lib;$(LibraryPath);$(ProjectDir)lib\win8\x64</LibraryPath>
+    <IncludePath>$(ProjectDir)include;$(ProjectDir)src;$(SolutionDir)libs\windows\libcurl\release\x64\include\curl;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)libs\windows\libcurl\release\x64\lib;$(LibraryPath);$(ProjectDir)lib\win8\x64</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -102,10 +102,12 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>CNG_KSP;_DEBUG;_WINDOWS;_USRDLL;CURL_STATICLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\debug\x64\lib\libcurl_a_debug.lib;%(AdditionalDependencies);$(ProjectDir)lib\x64\bcrypt_provider.lib;$(ProjectDir)lib\x64\cng_provider.lib;$(ProjectDir)lib\x64\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;bcrypt_provider.lib;crypt32.lib</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -115,10 +117,12 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>CNG_KSP;WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;CURL_STATICLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x86\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\debug\x86\lib\libcurl_a_debug.lib;%(AdditionalDependencies);$(ProjectDir)lib\win8\x86\bcrypt_provider.lib;$(ProjectDir)lib\win8\x86\cng_provider.lib;$(ProjectDir)lib\win8\x86\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;bcrypt_provider.lib;crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -131,12 +135,14 @@
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>CNG_KSP;WIN32;NDEBUG;_WINDOWS;_USRDLL;CURL_STATICLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\libcurl\release\x86\lib\libcurl_a.lib;$(SolutionDir)libs\windows\openssl\release\x86\lib\libeay32.lib;%(AdditionalDependencies);$(ProjectDir)lib\win8\x86\bcrypt_provider.lib;$(ProjectDir)lib\win8\x86\cng_provider.lib;$(ProjectDir)lib\win8\x86\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;bcrypt_provider.lib;crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -149,12 +155,14 @@
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>CNG_KSP;NDEBUG;_WINDOWS;_USRDLL;CURL_STATICLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>userenv.lib;$(SolutionDir)libs\windows\openssl\release\x64\lib\libeay32.lib;$(SolutionDir)libs\windows\libcurl\release\x64\lib\libcurl_a.lib;%(AdditionalDependencies);$(ProjectDir)lib\x64\bcrypt_provider.lib;$(ProjectDir)lib\x64\cng_provider.lib;$(ProjectDir)lib\x64\ncrypt_provider.lib</AdditionalDependencies>
+      <AdditionalDependencies>userenv.lib;bcrypt_provider.lib;crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>$(ProjectDir)src\KSP.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Projetos\BlackICE_Connect\include\Cryptographic Provider Development Kit\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
